# rightsizing-report-automation

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
finops_report_automation/: api.py  auth.py  aws.py  constants.py  errors.py  excel_writer.py  formatting.py  logger.py  main.py  messages_helper.py  project.py  resource.py  utils.py
finops_report_automation/example_configs/: amortized_cost_config.yaml  config.yaml
tests/: test_api.py  test_auth.py  test_project.py  test_reports.py
tests/test_data/: ebs_test.json  ec2_test.json  mock_cross_project_summary.xlsx  mock_ebs_accounts.xlsx  mock_ebs_recommendations.xlsx  mock_ebs_records.xlsx  mock_ec2_accounts.xlsx  mock_ec2_recommendations.xlsx  mock_ec2_records.xlsx  mock_project_sum.xlsx  mock_project_summary.xlsx  mock_s3_accounts.xlsx  mock_s3_recommendations.xlsx  mock_s3_records.xlsx  project_test.json  s3_test.json
